se implementa swagger para endpoints autenticados
